--- a/src/components/Contact/contato.css
+++ b/src/components/Contact/contato.css
@@ -14,3 +14,20 @@
     max-width: 800px;
     width: 100%;
   }
+  .title-container{
+    text-align:center;
+    font-size: large;
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+  .option-container{
+    text-align:center;
+    font-size: medium;
+    display: flex;
+    margin-bottom: 10px;
+    margin-right: 5px;
+    justify-content: center;
+    align-items:baseline;
+  }
